tests/lexer/valid/test_comments.src
// Тест 5: Комментарии
int x = 42; // это комментарий
/* многострочный
   комментарий */
/* вложенный /* комментарий */ test */