tests/lexer/invalid/test_mixed_errors.src
// Тест 9: Смешанные ошибки
int @x = "unterminated;
float 123.456.789;
/* незакрытый комментарий
int y = 42;
string s = "hello;